# MPCFillToPDF

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  build_exe.py  config.example.json  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff_hook.py  version_file.txt
.agent/skills/openspec-git-discipline/: SKILL.md
.githooks/: pre-commit
.github/workflows/: build.yml  tests.yml
.specs-fire/: state.yaml
.specsmd/fire/: memory-bank.yaml
cli/: main.py
gui/: locals_tab.py  lorcana_tab.py  main.py  op_tab.py  paths.py  rb_tab.py  settings_tab.py  widgets.py  xml_tab.py
openspec/: config.yaml
openspec/specs/carga-desde-web/: spec.md
openspec/specs/main-window-card-display/: spec.md
openspec/specs/moxfield-deck-import/: spec.md
openspec/specs/moxfield-pdf-generation/: spec.md
openspec/specs/scryfall-downloader/: spec.md
openspec/specs/splash-screen-launcher/: spec.md
openspec/specs/web-load-window/: spec.md
scripts/: crop.py
src/: app_settings.py  cancellation.py  config.py  constants.py  cropper.py  deck_importer.py  downloader.py  lorcana_scraper.py  moxfield.py  op_scraper.py  parser.py  pdf_generator.py  pipeline.py  precheck.py  quality.py  rb_scraper.py  scraper_utils.py  scryfall.py
tests/: test_app_settings.py  test_config.py  test_cropper.py  test_deck_importer.py  test_downloader.py  test_gui.py  test_lorcana_scraper.py  test_moxfield.py  test_op_scraper.py  test_pdf_generator.py  test_pipeline.py  test_rb_scraper.py  test_scryfall.py  test_scryfall_downloader.py  test_scryfall_integration.py
xml/: cards.xml
(+46 files in other folders)
