[project]
name = "mpcfilltopdf"
version = "0.1.0"
description = "Convierte proyectos de MPCFill (XML) en PDFs listos para imprenta local"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.0,<6",
    "pillow>=10.0,<12",
    "plyer>=2.0,<3",
    "reportlab>=4.0,<5",
    "requests>=2.28,<3",
    "windnd>=1.0,<2; sys_platform == 'win32'",
    "opencv-python>=4.8,<5",
    "numpy>=1.24,<3",
]

[project.scripts]
mpcfill-gui = "gui.main:main"
mpcfill-cli = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "cli", "gui"]

[tool.uv]
package = true
